--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Localizer</title>
   </head>
   <body class="bg-neutral-50 text-neutral-950 dark:bg-neutral-800 dark:text-neutral-50 h-screen">
     <noscript>
