--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Localizer</title>
   </head>
-  <body class="bg-neutral-50 text-neutral-950 dark:bg-neutral-800 dark:text-neutral-50 h-screen">
+  <body class="bg-neutral-50 text-neutral-950 dark:bg-neutral-900 dark:text-neutral-50">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
